DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
Nov-17-2004 patrickh    Added PyJuggler.snx, a module that makes Sonix C++
                        classes for use with Python.
                        NEW VERSION: 0.16.0
Nov-15-2004 patrickh    Fixed problems with std::vector<T> instances being
                        passed back and forth between C++ and Python.
                        NEW VERSION: 0.15.1
Nov-15-2004 patrickh    Updated to Gadgeteer 0.20.0.
                        NEW VERSION: 0.15.0
Nov-11-2004 patrickh    Exposed gadget::EventWindow, gadget::EventWindowProxy,
                        gadget::EventWindowInterface, gadget::StringData,
                        gadget::SpeechRecogDigital, gadget::SpeechRecogString,
                        gadget::SpeechRecogDigitalProxy,
                        gadget::SpeechRecogStringProxy,
                        gadget::SpeechRecogDigitalInterface,
                        gadget::SpeechRecogStringInterface, and the constants
                        defined in gadget::PositionUnitConversion.
                        NEW VERSION: 0.14.0
Nov-06-2004 patrickh    Exposed jccl::ConfigManager, jccl::ConfigDefinition,
                        jccl::PropertyDefinition, and jccl::VarType.  Removed
                        methods that expose the underly use of CppDOM in JCCL
                        classes.
                        NEW VERSION: 0.13.0
Oct-28-2004 patrickh    The pyjutil library is now linked into the PyJuggler
                        modules that need it using dynamic linking instead of
                        static linking.
Oct-27-2004 patrickh    The configure script option --enable-boost-hacks is no
                        longer required for detection of some Boost.Python
                        installations.
Oct-26-2004 patrickh    Added support for sharing application-specific data in