@@ -1,5 +1,7 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Nov-20-2004 patrickh    Removed PyJuggler.snx.SoundFactory.
+                        NEW VERSION: 0.16.2
 Nov-17-2004 patrickh    Added PyJuggler.snx, a module that makes Sonix C++
                         classes for use with Python.
                         NEW VERSION: 0.16.0
